--- a/backend-deployment.yml
+++ b/backend-deployment.yml
@@ -15,6 +15,8 @@ spec:
       labels:
         type: backend
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: worker2
       containers:
         - name: backend
           image: okqkrwhdtjd/backend:latest
